# STS-Ironclad-RL

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  research_task.yml
.github/workflows/: ci.yml
configs/benchmarks/: baseline_eval.json  dqn_vs_baselines.json  (+1 more)
docs/: architecture.md  current_milestone.md  learner_contract.md  live_action_contract.md  live_benchmarks.md  live_evaluation.md  live_game_bridge.md  live_game_first_milestone.md  live_observation_contract.md  live_policies.md  live_replay_format.md  live_testing.md  live_training_scaffold.md  local_mod_setup.md  milestone1_encoding.md  milestone1_trainable_env_slice.md  roadmap.md  trainable_agent_milestone.md  vision.md
scripts/: __init__.py  _live_utils.py  communication_bridge_smoke.py  communication_mod_bridge_helper.py  evaluate_live_policy.py  live_rollout_smoke.py  run_live_benchmark.py  run_live_experiment.py  train_live_dqn.py
tasks/: task_template.md
tests/: test_baseline_policies.py  test_bootstrap.py  test_combat_env.py  test_communication_bridge_smoke.py  test_encoding.py  test_evaluation.py  test_integration_bridge.py  test_integration_communication_mod.py  test_integration_logger.py  test_integration_protocol.py  test_live_actions.py  test_live_contracts.py  test_live_evaluation.py  test_live_observation.py  test_live_policies.py  test_live_replay.py  test_live_rollout.py  test_state.py  test_training_env.py  test_training_scaffold.py
tests/live/: fakes.py  (+3 more)
(+60 files in other folders)
